announcement dark mode fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -638,6 +638,10 @@ html.dark-mode {
 		}
 	}
 
+	.announcement {
+		background-color: #060606;
+	}
+
 	.button-primary {
 		border-color: #ccc;
 		background-color: #ccc;
